--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-574-mexant
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="index.html">Home</a></li>
                           <li class="scroll-to-section"><a href="index.html">Services</a></li>
-                          <li class="scroll-to-section"><a href="index.html">About</a></li>
+                          <li class="scroll-to-section"><a href="#about">About</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
