--- a/contact-us.html
+++ b/contact-us.html
@@ -20,13 +20,7 @@
      <link rel="stylesheet" href="assets/css/owl.css">
      <link rel="stylesheet" href="assets/css/animate.css">
      <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
- <!--
- 
- TemplateMo 574 Mexant
- 
- https://templatemo.com/tm-574-mexant
- 
- -->
+
  
    </head>
 
@@ -100,14 +94,14 @@
               <div class="info-item">
                 <i class="fa fa-envelope"></i>
                 <h4>Email Address</h4>
-                <a href="#">rmjautokeys<br>@hotmail.co.uk</a>
+                <a href="mailto:rmjautokeys@hotmail.co.uk">rmjautokeys@hotmail.co.uk</a>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="info-item">
                 <i class="fa fa-phone"></i>
                 <h4>Phone Number<br></h4>
-                <a href="#">07464 656223<br> </a>
+                <a href="Tel:07464 656223">07464 656223<br> </a>
               </div>
             </div>
             <div class="col-lg-4">
