--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                         <h2>RMJ Auto Keys</h2>
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#services">Services</a></li>
-                          <li class="scroll-to-section"><a href="/about-us.html">About Us</a></li>
-                          <li><a href="contact-us.html">Contact Us</a></li>
+                          <li class="scroll-to-section"><a href="#about">About Us</a></li>
+                          <!-- <li><a href="contact-us.html">Contact Us</a></li> -->
                           <li class="has-sub">
                               <a href="/our-services.html">Our Services</a>
                               <ul class="sub-menu">
-                                  <li><a href="#top">Key Cutting</a></li>
-                                  <li><a href="#top">Non Destructive car entry</a></li>
+                                  <li><a href="#key-cutting">Key Cutting</a></li>
+                                  <li><a href="#lockout-service">Non Destructive car entry</a></li>
                                   <li><a href="contact-us.html">Contact Us</a></li>
                               </ul>
                           </li>
-                          <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li>
-                          <li><a href="contact-us.html">Contact Support</a></li> 
+                          <!-- <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li> -->
+                          <li><a href="contact-us.html">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
@@ -84,7 +84,7 @@
                       <a href="#">Discover More</a>
                     </div>
                     <div class="orange-button">
-                      <a href=tel: 07464 656223>Call US</a>
+                      <a href=tel: 07464 656223>Call Us</a>
                     </div>
                   </div>
                 </div>
@@ -153,16 +153,16 @@
           <div class="service-item">
             <i class="fas fa-laptop"></i>
             <h4>Car Key programming</h4>
-            <p>We can reprogram your key, blar, blar, blar.</p>
+            <p>We can reprogram your key.</p>
           </div>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-key"></i>
             <h4>Spare Key making</h4>
             <p>We can make you another key.</p>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-key"></i>
@@ -174,7 +174,7 @@
           <div class="service-item">
             <i class="fas fa-user-secret"></i>
             <h4>Non Destructive Vehicle entry</h4>
-            <p>Our HTML CSS templates are well-tested on mobile, tablet, and desktop compatibility.</p>
+            <p>We can help you get back into your vehicle, without damage.</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -184,13 +184,13 @@
             <p>All we need is your registration number.</p>
           </div>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-toolbox"></i>
             <h4>Key for repair</h4>
             <p>If you have any idea or suggestion about new templates, feel free to let us know.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -231,7 +231,7 @@
       <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="assets/images/lock_picking.png" alt="Auto Locksmith Services"></a>
+            <a href="#lockout-service"><img class="card-img-top" src="assets/images/Emergency_Lockout_Services.webp" alt="Emergency Lockout Services"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a>Emergency Lockout Services</a>
@@ -242,7 +242,7 @@
         </div>
         <div class="col-lg-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="assets/images/lock_picking.png" alt="Auto Locksmith Services"></a>
+            <a href="#key-cutting"><img class="card-img-top" src="assets/images/Vehicle_Key_Cutting_and_Duplication.webp" alt="Key Cutting and Duplication"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a>Key Cutting and Duplication</a>
@@ -252,7 +252,7 @@
         </div>
         <div class="col-lg-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="assets/images/lock_picking.png" alt="Auto Locksmith Services"></a>
+            <a href="#"><img class="card-img-top" src="assets/images/Broken_car_Key_Extraction.webp" alt="Broken Key Extraction"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a>Broken Key Extraction</a>
@@ -262,17 +262,17 @@
         </div>
         <div class="col-lg-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="assets/images/lock_picking.png" alt="Auto Locksmith Services"></a>
+            <a href="#"><img class="card-img-top" src="assets/images/Transponder_Key_Programming.webp" alt="Transponder Key Programming"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a>Transponder Key Programming/a>
+                <a>Transponder Key Programming</a>
               </h4>
               <p class="card-text">Our Transponder Key Programming service is specifically designed to cater to the advanced security needs of modern vehicles. Utilising state-of-the-art equipment, our expert auto locksmiths can program transponder keys to communicate seamlessly with your car's immobilizer system. Whether you need a new transponder key programmed or an existing one reprogrammed, we ensure a perfect sync between your key and vehicle, enhancing security and functionality. Our service is quick, efficient, and tailored to fit the unique specifications of your car, guaranteeing a smooth and secure operation. Rely on us for professional transponder key programming and drive with peace of mind, knowing your vehicle is protected by the latest in automotive security technology.</p>     </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="assets/images/lock_picking.png" alt="Auto Locksmith Services"></a>
+            <a href="#"><img class="card-img-top" src="assets/images/vehicle_lock_repair_and_replacement.webp" alt="Lock Repair and Replacement"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a>Lock Repair and Replacement</a>
@@ -282,7 +282,7 @@
         </div>
         <div class="col-lg-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="assets/images/lock_picking.png" alt="Auto Locksmith Services"></a>
+            <a href="#"><img class="card-img-top" src="assets/images/Ignition_repair_and_replacement.webp" alt="Ignition Repair and Replacement"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a>Ignition Repair and Replacement</a>
@@ -424,6 +424,95 @@
       </div>
     </div>
   </section>
+
+<!-- ***** Contact Area End ***** -->
+
+<section class="map">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39255.67250480481!2d-2.764834178883236!3d52.05279159824044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486fd425aa6e5341%3A0xd59c9a4bfd3c6c96!2sHereford!5e0!3m2!1sen!2suk!4v1709498623199!5m2!1sen!2suk" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+        </div>
+      </div>
+      <div class="col-lg-10 offset-lg-1">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="info-item">
+              <i class="fa fa-envelope"></i>
+              <h4>Email Address</h4>
+              <a href="mailto:rmjautokeys@hotmail.co.uk">rmjautokeys@hotmail.co.uk</a>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info-item">
+              <i class="fa fa-phone"></i>
+              <h4>Phone Number<br></h4>
+              <a href="tel:07464 656223">07464 656223<br> </a>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info-item">
+              <i class="fa fa-map-marked-alt"></i>
+              <h4>Address<br></h4>
+              <a href="#">Hereford<br> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="contact-us-form">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 offset-lg-3">
+        <div class="section-heading">
+          <h6>Contact Us</h6>
+          <h4>Feel free to message us</h4>
+        </div>
+      </div>
+      <div class="col-lg-10 offset-lg-1">
+        <form id="contact" action="" method="post">
+          <div class="row">
+            <div class="col-lg-6">
+              <fieldset>
+                <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+              </fieldset>
+            </div>
+            <div class="col-lg-6">
+              <fieldset>
+                <input type="phone" name="phone" id="phone" placeholder="Your Phone..." autocomplete="on" required>
+              </fieldset>
+            </div>
+            <div class="col-lg-6">
+              <fieldset>
+                <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+              </fieldset>
+            </div>
+            <div class="col-lg-6">
+              <fieldset>
+                <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+              </fieldset>
+            </div>
+            <div class="col-lg-12">
+              <fieldset>
+                <textarea name="message" id="message" placeholder="Your Message"></textarea>
+              </fieldset>
+            </div>
+            <div class="col-lg-12">
+              <fieldset>
+                <button type="submit" id="form-submit" class="orange-button">Send Message</button>
+              </fieldset>
+              <br>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
 
   <section class="calculator">
     <div class="container">
@@ -569,17 +658,59 @@
   </section> -->
 
   <footer>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-4">
+<!-- Section: Social media -->
+  <!-- Facebook -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #3b5998;"
+    href="https://www.facebook.com/profile.php?id-100093683757303"
+    role="button"
+    ><i class="fab fa-facebook-f"></i
+  ></a>
+
+  <!-- Twitter -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #55acee;"
+    href="#!"
+    role="button"
+    ><i class="fab fa-x"></i
+  ></a>
+
+  <!-- Instagram -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #ac2bac;"
+    href="#!"
+    role="button"
+    ><i class="fab fa-instagram"></i
+  ></a>
+
+  <!-- Linkedin -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #0082ca;"
+    href="#!"
+    role="button"
+    ><i class="fab fa-linkedin-in"></i
+  ></a>
+
+</section>
+<!-- Section: Social media -->
+                 </div>
+        <div class="col-md-8">
           <p>Copyright © 2024 RMJ Auto Key. All Rights Reserved. 
-          
           <br>Designed by <a title="Sandy Browne WebDesign rel="sponsored" href="https://sandybrowne.com" target="_blank">Sandy Browne Web Design</a></p>
         </div>
-      </div>
     </div>
   </footer>
 
+  <div class="container text-center">
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+   
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
