--- a/contact-us.html
+++ b/contact-us.html
@@ -46,7 +46,7 @@
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
-                                  <li><a href="about-us.html">About Us</a></li>
+                                  <li><a href="#">About Us</a></li>
                                   <li><a href="#">Our Services</a></li>
                                   <li><a href="contact-us.html">Contact Us</a></li>
                               </ul>
