--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                        <h2>RMJ Auto Keys</h2>
+                        <!-- <h2>RMJ Auto Keys</h2> -->
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#services">Services</a></li>
                           <li class="scroll-to-section"><a href="#about">About Us</a></li>
@@ -153,7 +153,7 @@
           <div class="service-item">
             <i class="fas fa-laptop"></i>
             <h4>Car Key programming</h4>
-            <p>We can reprogram your key.</p>
+            <p>Trust our expert locksmiths to program your car keys with precision and efficiency.</p>
           </div>
         </div>
         <!-- <div class="col-lg-6">
@@ -167,21 +167,21 @@
           <div class="service-item">
             <i class="fas fa-key"></i>
             <h4>Key cutting</h4>
-            <p>We can cut a copy of your existing key.</p>
+            <p>Our skilled technicians offer precise key cutting services to provide you with duplicate keys.</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-user-secret"></i>
             <h4>Non Destructive Vehicle entry</h4>
-            <p>We can help you get back into your vehicle, without damage.</p>
+            <p>Count on our professionals for non-destructive entry into your vehicle, utilising advanced techniques to ensure no damage.</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-laptop-house"></i>
             <h4>All keys lost</h4>
-            <p>All we need is your registration number.</p>
+            <p>Facing a situation where all keys are lost? Rest assured, our locksmiths can assist in regaining access to your vehicle.</p>
           </div>
         </div>
         <!-- <div class="col-lg-6">
@@ -280,7 +280,7 @@
               <p class="card-text">Our Lock Repair and Replacement service offers comprehensive solutions for any issues you might encounter with your vehicle's locks. Whether it's wear and tear, damage from an attempted break-in, or a malfunction that's keeping you from securing your vehicle properly, our team of skilled auto locksmiths is here to help. We specialise in diagnosing lock problems and providing effective repairs or complete replacements as needed, using only the highest quality parts to ensure your vehicle's security is never compromised. Our approach combines precision, expertise, and swift service to restore your peace of mind and your car's protection. Trust us to handle your lock repair and replacement needs with the utmost care and professionalism, ensuring your vehicle remains safe and secure. </p>            </div>
           </div>
         </div>
-        <div class="col-lg-6 mb-4">
+        <div class="col-lg-6 mb-2">
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="assets/images/Ignition_repair_and_replacement.webp" alt="Ignition Repair and Replacement"></a>
             <div class="card-body">
@@ -424,6 +424,90 @@
       </div>
     </div>
   </section>
+
+<!-- About Us Component -->
+  <div class="section-heading">
+    <h6>About Us</h6>
+    <h4>Welcome to RMJ Auto Keys</h4>
+<br>
+    </h5>Hereford's premier auto locksmith</h5>
+  </div>
+  <section class="py-1 py-md-2">
+    <div class="container">
+      <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+        <div class="col-12 col-lg-6 col-xl-5">
+          <img class="img-fluid rounded" loading="lazy" src="assets/images/RMJ_Auto_Keys_logo.png" alt="About Us">
+        </div>
+        <div class="col-12 col-lg-6 col-xl-7">
+          <div class="row justify-content-xl-center">
+            <div class="col-12 col-xl-11">
+              <!-- <h2 class="mb-3">About RMJ Auto Keys</h2>
+              <p class="lead fs-4 text-secondary mb-3"> Welcome to RMJ Auto Keys, Hereford's premier auto locksmith service</p> -->
+              <p class="mb-4">We are dedicated to providing you with the most efficient and reliable solutions for all your automotive lock and key needs. Nestled in the heart of Hereford, we pride ourselves on our deep-rooted expertise, exceptional customer service, and a commitment to quality that sets us apart.
+              </p>
+              <p class="mb-3">Our Journey <br>
+                Founded by a passionate auto locksmith professional, RMJ Auto Keys has grown to Hereford's go-to auto locksmith service. Our journey has been driven by a simple yet powerful ethos: to offer trustworthy, swift, and innovative auto locksmith services to our community. We have honed our skills to ensure that we can tackle any challenge that comes our way, making us a trusted partner for vehicle owners across Hereford.</p>
+                
+                <!-- <div class="row gy-4 gy-md-0 gx-xxl-5X">
+                <div class="col-12 col-md-6">
+                  <div class="d-flex">
+                    <div class="me-4 text-primary">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                        <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+                      </svg>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Car Key Replacement: </h2>
+                      <p class="text-secondary mb-0">Lost your keys or need a spare? Our cutting-edge equipment allows us to create replacements for a wide variety of makes and models, ensuring you're never stranded.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Key Programming: </h2>
+                      <p class="text-secondary mb-0">Modern vehicles often require keys to be programmed to the car's computer. Our technicians are skilled in the latest programming techniques to ensure your keys work seamlessly with your vehicle.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Lockout Services: </h2>
+                      <p class="text-secondary mb-0">Locked out of your car? Our emergency lockout services are designed to get you back into your vehicle without any damage, available 24/7 for your convenience.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Broken Key Extraction: </h2>
+                      <p class="text-secondary mb-0">If your key has broken off in the lock or ignition, our experts can safely remove the broken piece and provide you with a new key, hassle-free.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Ignition Repair and Replacement: </h2>
+                      <p class="text-secondary mb-0">Trouble starting your car? We specialize in repairing and replacing faulty ignitions, ensuring a smooth start every time.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Lock Repair and Replacement: </h2>
+                      <p class="text-secondary mb-0">Whether it's wear and tear or damage from an attempted theft, we can repair or replace your car's locks to ensure your vehicle's security.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Our Commitment </h2>
+                      <p class="text-secondary mb-0">At RMJ Auto Keys, your peace of mind is our top priority. We are committed to delivering top-notch services with transparency, honesty, and integrity. Our team uses only the highest quality tools and parts, ensuring that every job is done right the first time. We understand the importance of your time, which is why we strive for prompt and efficient service, without compromising on quality.</p>
+                    </div>
+                    <div>
+                      <h2 class="h4 mb-3">Get in Touch </h2>
+                      <p class="text-secondary mb-0">Need assistance with your vehicle's locks or keys? Contact RMJ Auto Keys today. Our friendly team is here to provide you with professional advice and swift service, ensuring you're back on the road in no time. Trust us to be your reliable auto locksmith partner in Hereford.</p>
+                    </div>
+                  </div>
+                </div> -->
+
+                <!-- <div class="col-12 col-md-6">
+                  <div class="d-flex">
+                    <div class="me-4 text-primary">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
+                        <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
+                      </svg>
+                    </div>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 <!-- ***** Contact Area End ***** -->
 
@@ -576,7 +660,7 @@
     </div>
   </section>
 
-  <section class="testimonials" id="testimonials">
+  <!-- <section class="testimonials" id="testimonials">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -614,43 +698,6 @@
                 <img src="assets/images/testimonials-01.jpg" alt="">
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- <section class="partners">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
           </div>
         </div>
       </div>
