--- a/contact-us.html
+++ b/contact-us.html
@@ -167,52 +167,54 @@
     </div>
   </section>
 
-  <!-- <section class="partners">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-6">
-          <div class="item">
-            <img src="assets/images/client-01.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <footer>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-4">
+<!-- Section: Social media -->
+  <!-- Facebook -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #3b5998;"
+    href="https://www.facebook.com/profile.php?id-100093683757303"
+    role="button"
+    ><i class="fab fa-facebook-f"></i
+  ></a>
+
+  <!-- Twitter -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #55acee;"
+    href="#!"
+    role="button"
+    ><i class="fab fa-x"></i
+  ></a>
+
+  <!-- Instagram -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #ac2bac;"
+    href="#!"
+    role="button"
+    ><i class="fab fa-instagram"></i
+  ></a>
+
+  <!-- Linkedin -->
+  <a
+    class="btn text-white btn-floating m-1"
+    style="background-color: #0082ca;"
+    href="#!"
+    role="button"
+    ><i class="fab fa-linkedin-in"></i
+  ></a>
+
+</section>
+<!-- Section: Social media -->
+                 </div>
+        <div class="col-md-8">
           <p>Copyright © 2024 RMJ Auto Key. All Rights Reserved. 
-          
           <br>Designed by <a title="Sandy Browne WebDesign rel="sponsored" href="https://sandybrowne.com" target="_blank">Sandy Browne Web Design</a></p>
         </div>
-      </div>
     </div>
   </footer>
   <!-- Scripts -->
