--- a/about-us.html
+++ b/about-us.html
@@ -10,23 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>About RMJ Auto Keys - Your Trusted Hereford Auto Locksmith Specialists</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/RMJ-stylesheet.css">
+    <link rel="stylesheet" href="assets/css/rmj-stylesheet.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
-<!--
-
-TemplateMo 574 Mexant
-
-https://templatemo.com/tm-574-mexant
-
--->
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">  
 
   </head>
 
