--- a/contact-us.html
+++ b/contact-us.html
@@ -10,18 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>MJ Auto Keys - Hereford's Trusted Auto Locksmith Experts Contact Us page</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
      <!-- Bootstrap core CSS -->
      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-     <!-- Additional CSS Files -->
-     <link rel="stylesheet" href="assets/css/fontawesome.css">
-     <link rel="stylesheet" href="assets/css/RMJ-stylesheet.css">
-     <link rel="stylesheet" href="assets/css/owl.css">
-     <link rel="stylesheet" href="assets/css/animate.css">
-     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
+<!-- Additional CSS Files -->
+<link rel="stylesheet" href="assets/css/fontawesome.css">
+<link rel="stylesheet" href="assets/css/rmj-stylesheet.css">
+<link rel="stylesheet" href="assets/css/owl.css">
+<link rel="stylesheet" href="assets/css/animate.css">
+<link rel="stylesheet" href="assets/css/swiper-bundle.min.css">  
 
- 
+
    </head>
 
 <body>
@@ -33,26 +34,28 @@
           <div class="row">
               <div class="col-12">
                   <nav class="main-nav">
-                      <!-- ***** Logo Start ***** -->
+                     <!-- ***** Logo Start ***** -->
                       <!-- <a href="index.html" class="logo">
-                          <img src="assets/images/logo.png" alt="">
+                          <img src="assets/images/RMJ_Logo_80.png" alt="RMJ Auto Keys Logo">
                       </a> -->
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                          <li class="scroll-to-section"><a href="index.html">Services</a></li>
-                          <li class="scroll-to-section"><a href="index.html">About</a></li>
+                        <!-- <h2>RMJ Auto Keys</h2> -->
+                          <li class="scroll-to-section"><a href="./index.html" class="active">Home</a></li>
+                          <li class="scroll-to-section"><a href="./our-services.html">Services</a></li>
+                          <li class="scroll-to-section"><a href="./index.html#about">About Us</a></li>
+                          <!-- <li><a href="contact-us.html">Contact Us</a></li> -->
                           <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
+                              <a href="./our-services.html">Our Services</a>
                               <ul class="sub-menu">
-                                  <li><a href="#">About Us</a></li>
-                                  <li><a href="#">Our Services</a></li>
-                                  <li><a href="contact-us.html">Contact Us</a></li>
+                                  <li><a href="./our-services.html#key-cutting">Key Cutting</a></li>
+                                  <li><a href="./our-services.html#car-key-programming">Programming</a></li>
+                                  <li><a href="./our-services.html#key-duplication">Duplication</a></li>
                               </ul>
                           </li>
-                          <li class="scroll-to-section"><a href="index.html">Testimonials</a></li>
-                          <li><a href="contact-us.html">Contact Support</a></li> 
+                          <!-- <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li> -->
+                          <li><a href="contact-us.html">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
@@ -85,7 +88,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39255.67250480481!2d-2.764834178883236!3d52.05279159824044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486fd425aa6e5341%3A0xd59c9a4bfd3c6c96!2sHereford!5e0!3m2!1sen!2suk!4v1709498623199!5m2!1sen!2suk" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2453.1824593406727!2d-2.7417502233468154!3d52.05820127194378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48704a127182a4df%3A0x39cd1da4a90bd21c!2sWestfaling%20St%2C%20Hereford!5e0!3m2!1sen!2suk!4v1710611784543!5m2!1sen!2suk" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
           </div>
         </div>
         <div class="col-lg-10 offset-lg-1">
@@ -94,7 +97,7 @@
               <div class="info-item">
                 <i class="fa fa-envelope"></i>
                 <h4>Email Address</h4>
-                <a href="mailto:rmjautokeys@hotmail.co.uk">rmjautokeys@hotmail.co.uk</a>
+                <a href="mailto:rmjautokeys@hotmail.co.uk">rmjautokeys@hotmail.com</a>
               </div>
             </div>
             <div class="col-lg-4">
@@ -117,7 +120,73 @@
     </div>
   </section>
 
-  <section class="contact-us-form">
+  <section class="calculator">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <div class="left-image">
+            <img src="assets/images/calculator-image.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-5">
+          <div class="section-heading">
+            <h6>Contact Us</h6>
+            <h4>For advice & prices</h4>
+          </div>
+          <form id="calculate" action="" method="get">
+            <div class="row">
+              <div class="col-lg-6">
+                <fieldset>
+                  <label for="name">Your Name</label>
+                  <input type="name" name="name" id="name" placeholder="" autocomplete="on" required>
+                </fieldset>
+              </div>
+              <div class="col-lg-6">
+                <fieldset>
+                  <label for="email">Your Email</label>
+                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="" required="">
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="subject">Subject</label>
+                  <input type="subject" name="subject" id="subject" placeholder="" autocomplete="on" >
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="subject">Vehicle Registration</label>
+                  <input type="text" name="vehicle-registration" id="subject" placeholder="" autocomplete="on" >
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="chooseOption" class="form-label">Service Required</label>
+                  <select name="Category" class="form-select" aria-label="Default select example" id="chooseOption" onchange="this.form.click()">
+                      <option selected>Please choose an Option</option>
+                      <option type="checkbox" name="option1" value="Free Quotation">Free Quotation</option>
+                      <option value="Spare Keys">Car Key Programming</option>
+                      <option value="Spare Keys">Spare Keys</option>
+                      <option value="Key Cutting">Key Cutting</option>
+                      <option value="Non Destructive Vehicle Entry">Non Destructive Vehicle Entry</option>
+                      <option value="All Keys Lost">All Keys Lost</option>
+                      <option value="General Enquiry">General Enquiry</option>
+                    </select>
+              </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <button type="submit" id="form-submit" class="orange-button">Submit Now</button>
+                </fieldset>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- <section class="contact-us-form">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -165,7 +234,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <footer>
     <div class="container-fluid">
