--- a/about-us.html
+++ b/about-us.html
@@ -34,10 +34,10 @@
               <div class="col-12">
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
-                      <!-- <a href="index.html" class="logo">
-                          <img src="assets/images/logo.png" alt="">
-                      </a> -->
-                      <!-- ***** Logo End ***** -->
+                      <a href="index.html" class="logo">
+                        <img src="assets/images/rmj_text_logo_69.png" alt="RMJ Auto Keys Logo">
+                    </a>
+                    <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="index.html">Home</a></li>
@@ -252,7 +252,7 @@
 <!-- Section: Social media -->
                  </div>
         <div class="col-md-8">
-          <p>Copyright © 2024 RMJ Auto Key. All Rights Reserved. 
+          <p>Copyright © 2024 RMJ Auto Keys. All Rights Reserved. 
           <br>Designed by <a title="Sandy Browne WebDesign rel="sponsored" href="https://sandybrowne.com" target="_blank">Sandy Browne Web Design</a></p>
         </div>
     </div>
