--- a/our-services.html
+++ b/our-services.html
@@ -33,11 +33,11 @@
       <div class="row">
           <div class="col-12">
               <nav class="main-nav">
-                   <!-- ***** Logo Start ***** -->
-                      <!-- <a href="index.html" class="logo">
-                          <img src="assets/images/RMJ_Logo_80.png" alt="RMJ Auto Keys Logo">
-                      </a> -->
-                      <!-- ***** Logo End ***** -->
+                    <!-- ***** Logo Start ***** -->
+                    <a href="index.html" class="logo">
+                      <img src="assets/images/rmj_text_logo_69.png" alt="RMJ Auto Keys Logo">
+                  </a>
+                  <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                         <!-- <h2>RMJ Auto Keys</h2> -->
@@ -238,7 +238,7 @@
 <!-- Section: Social media -->
                  </div>
         <div class="col-md-8">
-          <p>Copyright © 2024 RMJ Auto Key. All Rights Reserved. 
+          <p>Copyright © 2024 RMJ Auto Keys. All Rights Reserved. 
           <br>Designed by <a title="Sandy Browne WebDesign rel="sponsored" href="https://sandybrowne.com" target="_blank">Sandy Browne Web Design</a></p>
         </div>
     </div>
