--- a/contact-us.html
+++ b/contact-us.html
@@ -81,46 +81,45 @@
     </div>
   </div>
 
-  <!-- ***** Main Banner Area End ***** -->
+  <!-- ***** Contact Area End ***** -->
 
-  <section class="map">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2453.1824593406727!2d-2.7417502233468154!3d52.05820127194378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48704a127182a4df%3A0x39cd1da4a90bd21c!2sWestfaling%20St%2C%20Hereford!5e0!3m2!1sen!2suk!4v1710611784543!5m2!1sen!2suk" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
-          </div>
+<section class="map">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 pb-4">
+        <div id="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2453.1824593406727!2d-2.7417502233468154!3d52.05820127194378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48704a127182a4df%3A0x39cd1da4a90bd21c!2sWestfaling%20St%2C%20Hereford!5e0!3m2!1sen!2suk!4v1710611784543!5m2!1sen!2suk" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen="" title="Google Map"></iframe>
         </div>
-        <div class="col-lg-10 offset-lg-1">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="info-item">
-                <i class="fa fa-envelope"></i>
-                <h4>Email Address</h4>
-                <a href="mailto:rmjautokeys@hotmail.co.uk">rmjautokeys@hotmail.com</a>
-              </div>
+      <div class="col-lg-10 offset-lg-1">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="info-item">
+              <i class="fa fa-envelope"></i>
+              <h4>Email Address</h4>
+              <a href="mailto:rmjautokeys@hotmail.co.uk"><br>rmjautokeys@hotmail.com</a>
             </div>
-            <div class="col-lg-4">
-              <div class="info-item">
-                <i class="fa fa-phone"></i>
-                <h4>Phone Number<br></h4>
-                <a href="Tel:07464 656223">07464 656223<br> </a>
-              </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info-item">
+              <i class="fa fa-phone"></i>
+              <h4>Phone Number<br></h4>
+              <a href="tel:07464 656223"><br>07464 656223<br> </a>
             </div>
-            <div class="col-lg-4">
-              <div class="info-item">
-                <i class="fa fa-map-marked-alt"></i>
-                <h4>Address<br></h4>
-                <a href="#">Hereford<br> </a>
-              </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info-item">
+              <i class="fa fa-map-marked-alt"></i>
+              <h4>Address<br></h4>
+              <a href="#">Westfaling Street, <br>Hereford, HR4 0JF </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="calculator">
+  <!-- <section class="calculator">
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
@@ -184,7 +183,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- <section class="contact-us-form">
     <div class="container">
