--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 <section class="map">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-12 pb-4">
         <div id="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2453.1824593406727!2d-2.7417502233468154!3d52.05820127194378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48704a127182a4df%3A0x39cd1da4a90bd21c!2sWestfaling%20St%2C%20Hereford!5e0!3m2!1sen!2suk!4v1710611784543!5m2!1sen!2suk" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen="" title="Google Map"></iframe>
         </div>
@@ -415,8 +415,9 @@
         </form>
       </div>
     </div>
-  </div>
-</section> -->
+  </div> -->
+  
+<!-- </section> 
   <section class="calculator" id="calculator">
     <div class="container">
       <div class="row">
@@ -481,7 +482,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <footer>
     <div class="container-fluid">
